unpackaged/main/default/objects/Contract/fields/EBH_IsContractAdminLogin__c.field-meta.xml
<CustomField>
    <fullName>EBH_IsContractAdminLogin__c</fullName>
    <description>[EBH] (EPH-4159) - Show &#39;Send with DocuSign&#39; button for  Contract Admins only</description>
    <formula>$Permission.EBH_ContractAdmin</formula>
    <label>Is Contract Admin Login</label>
    <type>Checkbox</type>
</CustomField>