unpackaged/main/default/objects/Contract/fields/EBH_LegalApprover__c.field-meta.xml
<CustomField>
    <fullName>EBH_LegalApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-149) : Legal approver of the contract</description>
    <label>Legal Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EBH_LegalContracts</relationshipName>
    <type>Lookup</type>
</CustomField>