unpackaged/main/default/objects/Contract/fields/EBH_LinkedContract__c.field-meta.xml
<CustomField>
    <fullName>EBH_LinkedContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-175) : Linked Contract</description>
    <inlineHelpText>Please select a linked agreement if your contract is an amendment to an existing one.</inlineHelpText>
    <label>Linked Contract</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>EBH_LinkedContracts</relationshipName>
    <type>Lookup</type>
</CustomField>