unpackaged/main/default/objects/Contract/fields/EBH_LocationofSignedContract__c.field-meta.xml
<CustomField>
    <fullName>EBH_LocationofSignedContract__c</fullName>
    <description>[EBH] (EPH-1982) : Location of Signed Contract</description>
    <label>Location of Signed Contract</label>
    <type>TextArea</type>
</CustomField>