unpackaged/main/default/objects/Contract/fields/EBH_MainThreshold__c.field-meta.xml
<CustomField>
    <fullName>EBH_MainThreshold__c</fullName>
    <description>[EBH] (EPH-3985) - Main Threshold</description>
    <label>Main Threshold</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>