unpackaged/main/default/objects/Contract/fields/EBH_MainTierThresholdofTarget__c.field-meta.xml
<CustomField>
    <fullName>EBH_MainTierThresholdofTarget__c</fullName>
    <description>[EBH] (EPH-3985) - Main Tier Threshold (% of Target),
US-0010717 - Accelerator &amp; Decelerator target fields tooltip descriptions</description>
    <inlineHelpText>Enter the percentage of target the customer needs to achieve in order to qualify for the main tier rebate (normally 100% but can be negotiated individually with the seller)</inlineHelpText>
    <label>Main Tier Threshold (% of Target)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>