unpackaged/main/default/objects/Contract/fields/EBH_MainVertical__c.field-meta.xml
<CustomField>
    <fullName>EBH_MainVertical__c</fullName>
    <description>[EBH] (EPH-89)</description>
    <label>Main Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business &amp; Industrial</fullName>
            </value>
            <value>
                <fullName>Collectibles</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Home &amp; Garden</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Parts &amp; Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>