unpackaged/main/default/objects/Contract/fields/EBH_NoticeRestriction__c.field-meta.xml
<CustomField>
    <fullName>EBH_NoticeRestriction__c</fullName>
    <description>[EBH] (EPH-172) : Notice Restriction</description>
    <label>Notice Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End of the term</fullName>
            </value>
            <value>
                <fullName>End of a month</fullName>
            </value>
            <value>
                <fullName>End of a quarter</fullName>
            </value>
            <value>
                <fullName>Initial term: end of the term, afterwards: none</fullName>
            </value>
            <value>
                <fullName>Initial term: end of the term, afterwards: end of a month</fullName>
            </value>
            <value>
                <fullName>Initial term: end of the term, afterwards: end of a quarter</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>