unpackaged/main/default/objects/Contract/fields/EBH_OnboardingFees__c.field-meta.xml
<CustomField>
    <fullName>EBH_OnboardingFees__c</fullName>
    <description>[EBH] (EPH-4145) - To capture onboarding fees for Revenue Share contracts</description>
    <label>Onboarding Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>