unpackaged/main/default/objects/Contract/fields/EBH_Partner__c.field-meta.xml
<CustomField>
    <fullName>EBH_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (US-0057) : Partner</description>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Partner)</relationshipLabel>
    <relationshipName>EBH_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>