unpackaged/main/default/objects/Contract/fields/EBH_PreApprovedTemplate__c.field-meta.xml
<CustomField>
    <fullName>EBH_PreApprovedTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-133) : Temporary field</description>
    <inlineHelpText>Please leave this unchecked if you require a custom contract from legal</inlineHelpText>
    <label>Pre-approved Template used?</label>
    <type>Checkbox</type>
</CustomField>