unpackaged/main/default/objects/Contract/fields/EBH_PricingEndDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_PricingEndDate__c</fullName>
    <description>[EBH] (US-0002) : Pricing End Date</description>
    <label>Pricing End Date</label>
    <type>Date</type>
</CustomField>