unpackaged/main/default/objects/Contract/fields/EBH_PricingStartDate__c.field-meta.xml
<CustomField>
    <fullName>EBH_PricingStartDate__c</fullName>
    <description>[EBH] (US-0002) : Pricing Start Date</description>
    <label>Pricing Start Date</label>
    <type>Date</type>
</CustomField>