unpackaged/main/default/objects/Contract/fields/EBH_RebateTierrebate__c.field-meta.xml
<CustomField>
    <fullName>EBH_RebateTierrebate__c</fullName>
    <description>[EBH] (US-0057) (EPH-3985) : Rebate Tier (% rebate),
US-0010717 - Accelerator &amp; Decelerator target fields tooltip descriptions</description>
    <inlineHelpText>Enter the percentage rebate the customer will get on their FVF if they achieve the main target</inlineHelpText>
    <label>Main Tier (% rebate)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>