unpackaged/main/default/objects/Contract/fields/EBH_RecordLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_RecordLink__c</fullName>
    <description>[EBH] (EPH-2813) : Lightning Record Link to prevent the redirect to salesforce classic</description>
    <formula>$Setup.EBH_LightningURL__c.EBH_URL__c +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lightning Record Link</label>
    <type>Text</type>
</CustomField>