unpackaged/main/default/objects/Contract/fields/EBH_RequesterNotes__c.field-meta.xml
<CustomField>
    <fullName>EBH_RequesterNotes__c</fullName>
    <description>[EBH] (EPH-5469) - to capture the requester notes from the comments of Contract approval</description>
    <inlineHelpText>Enter more explanation of the reason for the request as well as any business case justification and special conditions to call</inlineHelpText>
    <label>Requester Notes</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>