unpackaged/main/default/objects/Contract/fields/EBH_RevenueShareRate__c.field-meta.xml
<CustomField>
    <fullName>EBH_RevenueShareRate__c</fullName>
    <description>[EBH] (US-0057) : Revenue Share Rate</description>
    <label>Revenue Share Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>