unpackaged/main/default/objects/Contract/fields/EBH_Site__c.field-meta.xml
<CustomField>
    <fullName>EBH_Site__c</fullName>
    <description>[EBH] (EPH-133) : Site</description>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>NL</fullName>
            </value>
            <value>
                <fullName>CH</fullName>
            </value>
            <value>
                <fullName>AT</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>IE</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>