unpackaged/main/default/objects/Contract/fields/EBH_StoreSubscription__c.field-meta.xml
<CustomField>
    <fullName>EBH_StoreSubscription__c</fullName>
    <description>[EBH] (US-0002) : Store Subscription</description>
    <label>Store Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_Site__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Standard Price</fullName>
            </value>
            <value>
                <fullName>Free Basic</fullName>
            </value>
            <value>
                <fullName>Free Featured/ Top</fullName>
            </value>
            <value>
                <fullName>Free Anchor/ Premium</fullName>
            </value>
            <value>
                <fullName>Free Platinum</fullName>
            </value>
            <value>
                <fullName>Not Free</fullName>
                <isActive>false</isActive>
                <label>Not Free</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>