unpackaged/main/default/objects/Contract/fields/EBH_TotalGMVforContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>EBH_TotalGMVforContractPeriod__c</fullName>
    <description>[EBH] (EPH-5474) - To display the GMV Contract for Period for both ACP as well as Listing</description>
    <formula>EBH_GMVforContractPeriod__c + EBH_EstimatedGMVforContractPeriod__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GMV for Contract Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>