unpackaged/main/default/objects/Contract/fields/EBH_TurnaroundTime__c.field-meta.xml
<CustomField>
    <fullName>EBH_TurnaroundTime__c</fullName>
    <description>[EBH] (EPH-142) : Turnaround Time</description>
    <formula>CompanySignedDate -  EBH_DateSentforFinancePrecheck__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turnaround Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>