unpackaged/main/default/objects/Contract/fields/GMV_Version__c.field-meta.xml
<CustomField>
    <fullName>GMV_Version__c</fullName>
    <description>US-0011057 - New ACP contract record field to indicate if Contract is GMV1.0 or GMV2.</description>
    <inlineHelpText>GMV2.0 definition : GMV consists of the total value of all paid transactions between users on our platforms during the applicable period inclusive of shipping fees and taxes.</inlineHelpText>
    <label>GMV Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GMV1.0</fullName>
            </value>
            <value>
                <fullName>GMV2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>