unpackaged/main/default/objects/Contract/fields/Is_ROE__c.field-meta.xml
<CustomField>
    <fullName>Is_ROE__c</fullName>
    <formula>AND( upper(Account.EBH_BillingCountry__c) &lt;&gt;&#39;UK&#39;,
upper(Account.EBH_BillingCountry__c) &lt;&gt;&#39;ES&#39;,
upper(Account.EBH_BillingCountry__c) &lt;&gt;&#39;DE&#39;,
upper(Account.EBH_BillingCountry__c) &lt;&gt;&#39;FR&#39;,
upper(Account.EBH_BillingCountry__c) &lt;&gt;&#39;IT&#39;,
UPPER(Account.EBH_BillingCountry__c)  &lt;&gt;&#39;UNITED KINGDOM&#39;,
UPPER(Account.EBH_BillingCountry__c)  &lt;&gt;&#39;DEUTSCHLAND&#39;,
UPPER(Account.EBH_BillingCountry__c)  &lt;&gt;&#39;GERMANY&#39;,
UPPER(Account.EBH_BillingCountry__c)  &lt;&gt;&#39;FRANCE&#39;,
UPPER(Account.EBH_BillingCountry__c)  &lt;&gt;&#39;ITALY&#39;,
UPPER(Account.EBH_BillingCountry__c)  &lt;&gt;&#39;SPAIN&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is ROE</label>
    <type>Checkbox</type>
</CustomField>