unpackaged/main/default/objects/Contract/fields/List_Control_Values__c.field-meta.xml
<CustomField>
    <fullName>List_Control_Values__c</fullName>
    <description>Field used to prevent users to manually change status of the contract</description>
    <label>List Control Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>