unpackaged/main/default/objects/Contract/fields/Number_of_Pricing_P2_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pricing_P2_records__c</fullName>
    <label>Number of Pricing P2 records</label>
    <summaryFilterItems>
        <field>EBH_Pricing__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Listing Pricing P2.0</value>
    </summaryFilterItems>
    <summaryForeignKey>EBH_Pricing__c.EBH_ContractId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>