unpackaged/main/default/objects/Contract/fields/Number_of_Pricing_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pricing_records__c</fullName>
    <label>Number of Pricing records</label>
    <summaryForeignKey>EBH_Pricing__c.EBH_ContractId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>