unpackaged/main/default/objects/Contract/fields/Number_of_sellers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sellers__c</fullName>
    <label>Number of sellers</label>
    <summaryForeignKey>EBH_ContractSeller__c.EBH_ContractNumber__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>