unpackaged/main/default/objects/Contract/fields/Pricing_Implementation_Note__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Implementation_Note__c</fullName>
    <description>[#EPH-7035] Contracts - Pricing Implemented Date fields in Contract Object</description>
    <inlineHelpText>Allow us to note RC# and any pricing information that may be useful for audit purposes</inlineHelpText>
    <label>Pricing Implementation Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>