unpackaged/main/default/objects/Contract/fields/Pricing_Implemented_Date__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Implemented_Date__c</fullName>
    <description>[#EPH-7035] Contracts - Pricing Implemented Date fields in Contract Object</description>
    <inlineHelpText>This allow contract manager to report on when pricing is implemented and Execution - Implementation timelines. It will enable them to filter reports by contract / amendments that are not yet implemented.</inlineHelpText>
    <label>Pricing Implemented Date</label>
    <type>Date</type>
</CustomField>