unpackaged/main/default/objects/Contract/fields/Pricing_Reminder_Period__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Reminder_Period__c</fullName>
    <description>US-0009399 - [Contracts] Amends to Existing Contract Expiration Date reminder</description>
    <formula>IF( EBH_PricingEndDate__c  =  TODAY() , &#39;Today&#39;, &#39;in &#39;&amp;TEXT(EBH_PricingEndDate__c - TODAY())&amp;&#39; days&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Reminder Period</label>
    <type>Text</type>
</CustomField>