unpackaged/main/default/objects/Contract/fields/PricingVersion__c.field-meta.xml
<CustomField>
    <fullName>PricingVersion__c</fullName>
    <description>US-0007807</description>
    <label>Pricing Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P2.0</fullName>
                <default>true</default>
                <label>P2.0</label>
            </value>
            <value>
                <fullName>P1.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>