unpackaged/main/default/objects/Contract/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <defaultValue>(&quot;Refurbished&quot;)</defaultValue>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <label>Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>