unpackaged/main/default/objects/Contract/fields/Reason_for_Contract_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Contract_Amendment__c</fullName>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <label>Reason for Contract/Amendment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seller / Brand Acquisition</fullName>
            </value>
            <value>
                <fullName>Inventory Acquisition / Enhancement</fullName>
            </value>
            <value>
                <fullName>Seller Acceleration</fullName>
            </value>
            <value>
                <fullName>Seller Retention</fullName>
            </value>
            <value>
                <fullName>Seller Re-activation</fullName>
            </value>
            <value>
                <fullName>Refurbished program participation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>