unpackaged/main/default/objects/Contract/fields/Reminder_Email_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Email_Send_Date__c</fullName>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <inlineHelpText>Date when Reminder eMail will be sent to seller</inlineHelpText>
    <label>Reminder Email Send Date</label>
    <type>Date</type>
</CustomField>