unpackaged/main/default/objects/Contract/fields/Reminder_Period__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Period__c</fullName>
    <description>EPH-112 Receiving a reminder on the contract expiration date</description>
    <formula>If(EndDate =  TODAY() ,&#39;Today&#39;,&#39;in &#39;&amp;TEXT(EndDate - TODAY())&amp;&#39; days&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Period</label>
    <type>Text</type>
</CustomField>