unpackaged/main/default/objects/Contract/fields/Seller_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Seller_Signed_Date__c</fullName>
    <description>US-0009864 - [Docusign] New Signatory details to be added in Contracts</description>
    <inlineHelpText>Date when the seller signed the contract.</inlineHelpText>
    <label>Seller Signed Date</label>
    <type>Date</type>
</CustomField>