unpackaged/main/default/objects/Contract/fields/Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0009316 - [Contracts] Add &quot;Surcharge&quot; to Contracts</description>
    <inlineHelpText>For DE this would be the below Standard Fee, for IT/ES and UK this would be the SNAD surcharge that will be applied.</inlineHelpText>
    <label>Surcharge</label>
    <type>Checkbox</type>
</CustomField>