unpackaged/main/default/objects/Contract/fields/TCs_URL__c.field-meta.xml
<CustomField>
    <fullName>TCs_URL__c</fullName>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <label>T&amp;Cs URL</label>
    <type>Url</type>
</CustomField>