unpackaged/main/default/objects/Contract/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>US-0009871 - [Refurb] Send Click Agreements to Contract Sellers
alternative id for Site acceptance
auto populated by trigger.</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>