unpackaged/main/default/objects/Contract/fields/VolumeBasedDiscount__c.field-meta.xml
<CustomField>
    <fullName>VolumeBasedDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US-0007807
US-0008522-change label</description>
    <inlineHelpText>Check this field to apply the volume discounts to the special FVF calculation.</inlineHelpText>
    <label>Special Volume Discount applicable</label>
    <type>Checkbox</type>
</CustomField>