unpackaged/main/default/objects/Contract/recordTypes/EBH_AccessionAgreement.recordType-meta.xml
<RecordType>
    <fullName>EBH_AccessionAgreement</fullName>
    <active>false</active>
    <description>Accession Agreement</description>
    <label>Accession Agreement</label>
</RecordType>