unpackaged/main/default/objects/Contract/recordTypes/EBH_ACP.recordType-meta.xml
<RecordType>
    <fullName>EBH_ACP</fullName>
    <active>true</active>
    <description>Annual Commitment Plan (ACP)</description>
    <label>ACP</label>
</RecordType>