unpackaged/main/default/objects/Contract/recordTypes/EBH_BrandOwnerLicense.recordType-meta.xml
<RecordType>
    <fullName>EBH_BrandOwnerLicense</fullName>
    <active>false</active>
    <description>Brand Owner License</description>
    <label>Brand Owner License</label>
</RecordType>