unpackaged/main/default/objects/Contract/recordTypes/EBH_BrandRelationsAgreement.recordType-meta.xml
<RecordType>
    <fullName>EBH_BrandRelationsAgreement</fullName>
    <active>false</active>
    <description>Branded Showroom / Authorized Seller</description>
    <label>Brand Relations Agreement</label>
</RecordType>