unpackaged/main/default/objects/Contract/recordTypes/EBH_ClickAndCollectAddendum.recordType-meta.xml
<RecordType>
    <fullName>EBH_ClickAndCollectAddendum</fullName>
    <active>false</active>
    <description>Click &amp; Collect (C&amp;C) Addendum</description>
    <label>Click and Collect Addendum</label>
</RecordType>