unpackaged/main/default/objects/Contract/recordTypes/EBH_ClickandCollectAgreement.recordType-meta.xml
<RecordType>
    <fullName>EBH_ClickandCollectAgreement</fullName>
    <active>false</active>
    <description>Click and Collect (C&amp;C) Agreement</description>
    <label>Click and Collect Agreement</label>
</RecordType>