unpackaged/main/default/objects/Contract/recordTypes/EBH_Exclusivity.recordType-meta.xml
<RecordType>
    <fullName>EBH_Exclusivity</fullName>
    <active>false</active>
    <description>Exclusivity</description>
    <label>Exclusivity</label>
</RecordType>