unpackaged/main/default/objects/Contract/recordTypes/EBH_ListingAgreement.recordType-meta.xml
<RecordType>
    <fullName>EBH_ListingAgreement</fullName>
    <active>true</active>
    <description>Listing Agreement (Special Pricing)</description>
    <label>Listing Agreement</label>
</RecordType>