unpackaged/main/default/objects/Contract/recordTypes/EBH_LockedACPContract.recordType-meta.xml
<RecordType>
    <fullName>EBH_LockedACPContract</fullName>
    <active>true</active>
    <description>[EBH] (EPH-4159) This record type is the locked version of the contract</description>
    <label>Locked ACP Contract</label>
</RecordType>