unpackaged/main/default/objects/Contract/recordTypes/EBH_LockedLAContract.recordType-meta.xml
<RecordType>
    <fullName>EBH_LockedLAContract</fullName>
    <active>true</active>
    <description>[EBH] (EPH-4159) This record type is the locked version of the contract</description>
    <label>Locked LA Contract</label>
</RecordType>