unpackaged/main/default/objects/Contract/recordTypes/EBH_LockedRSContract.recordType-meta.xml
<RecordType>
    <fullName>EBH_LockedRSContract</fullName>
    <active>true</active>
    <description>[EBH] (EPH-4159) This record type is the locked version of the contract</description>
    <label>Locked RS Contract</label>
</RecordType>