unpackaged/main/default/objects/Contract/recordTypes/EBH_NDAMutual.recordType-meta.xml
<RecordType>
    <fullName>EBH_NDAMutual</fullName>
    <active>false</active>
    <description>Non-Disclosure Agreement (NDA)</description>
    <label>NDA Mutual</label>
</RecordType>