unpackaged/main/default/objects/Contract/recordTypes/EBH_NDAUnilateral.recordType-meta.xml
<RecordType>
    <fullName>EBH_NDAUnilateral</fullName>
    <active>false</active>
    <description>Non-Disclosure Agreement (NDA) - Unilateral</description>
    <label>NDA Unilateral</label>
</RecordType>