unpackaged/main/default/objects/Contract/recordTypes/EBH_RevenueShare.recordType-meta.xml
<RecordType>
    <fullName>EBH_RevenueShare</fullName>
    <active>true</active>
    <description>Revenue Share</description>
    <label>Revenue Share</label>
</RecordType>