unpackaged/main/default/objects/Contract/recordTypes/EBH_TechnologyCoinvest.recordType-meta.xml
<RecordType>
    <fullName>EBH_TechnologyCoinvest</fullName>
    <active>false</active>
    <description>Technology Coinvest</description>
    <label>Technology Coinvest</label>
</RecordType>