unpackaged/main/default/objects/Contract/recordTypes/Refurbished.recordType-meta.xml
<RecordType>
    <fullName>Refurbished</fullName>
    <active>true</active>
    <description>Refurbished Contracts</description>
    <label>Refurbished</label>
</RecordType>