unpackaged/main/default/objects/Contract/validationRules/Business_Contact_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Business_Contact_Validation</fullName>
    <active>true</active>
    <description>US-0008996 - [Docusign]Making Legal Entity Contact creation a mandatory step for Contract creation</description>
    <errorConditionFormula>AND(NOT($Setup.byPass__c.ByPass_Validation__c), 
OR(RecordType.DeveloperName = &#39;EBH_ACP&#39; ,RecordType.DeveloperName = &#39;EBH_ListingAgreement&#39; ,RecordType.DeveloperName = &#39;EBH_RevenueShare&#39;), ISPICKVAL(Status, &#39;Draft&#39;) ,  OR(ISBLANK( Business_Contact__c ), AND( NOT(ISBLANK( Business_Contact__c )) , OR( ISBLANK(Business_Contact__r.FirstName) ,ISBLANK(Business_Contact__r.LastName),ISBLANK(  Business_Contact__r.Email )) ) ) )</errorConditionFormula>
    <errorDisplayField>Business_Contact__c</errorDisplayField>
    <errorMessage>Please select or create a new Seller Signatory Contact with First Name, Last Name and Primary Email populated.</errorMessage>
</ValidationRule>