unpackaged/main/default/objects/Contract/validationRules/Conditional_Mandatory_Surcharge.validationRule-meta.xml
<ValidationRule>
    <fullName>Conditional_Mandatory_Surcharge</fullName>
    <active>false</active>
    <description>US-0009316 - [Contracts] Add &quot;Surcharge&quot; to Contracts</description>
    <errorConditionFormula>AND(NOT($Setup.byPass__c.ByPass_Validation__c),
    OR(RecordType.DeveloperName = &#39;EBH_ListingAgreement&#39;, 
       RecordType.DeveloperName = &#39;EBH_ACP&#39;),
    Surcharge__c = false, 
    ISPICKVAL(Status, &#39;Draft&#39;)
)</errorConditionFormula>
    <errorDisplayField>Surcharge__c</errorDisplayField>
    <errorMessage>Please completed the field</errorMessage>
</ValidationRule>