unpackaged/main/default/objects/Contract/validationRules/ConditionalMandatoryACPVolumeDiscount.validationRule-meta.xml
<ValidationRule>
    <fullName>ConditionalMandatoryACPVolumeDiscount</fullName>
    <active>true</active>
    <description>US-0009303 - [Contracts] Add Volume Discounts to ACP Contracts</description>
    <errorConditionFormula>AND( NOT($Setup.byPass__c.ByPass_Validation__c),
     ISBLANK( VolumeDiscounts__c ),
     RecordType.DeveloperName = &#39;EBH_ACP&#39;,
     VolumeBasedDiscount__c = true
   )</errorConditionFormula>
    <errorDisplayField>VolumeDiscounts__c</errorDisplayField>
    <errorMessage>Please complete the field</errorMessage>
</ValidationRule>